# VCD2Photo

./: .gitignore  README.md  pyproject.toml  vcd-mcp  vcd-mcp.bat  vcd-to-image  vcd-to-image.bat
examples/: lab1_led_test.vcd  mcp-config-linux.json  mcp-config-windows.json  report_waves.json  signals.txt
tools/: __init__.py  vcd_mcp_server.py  vcd_to_image.py  vivado_wave.py
